MFC 272763: If we fail to send a signal after rotation, print the pidfile from which the corresponding PID was obtained.

PR:           194143

Former-commit-id: 727a4f28e7b382a768758039a56fbbc34e4c64ba